2004-01-07  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnr/nr-types.h: Move cross to its sole user, src/geom.cpp.

2004-01-06  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/desktop-snap.cpp: Make the `horizontal' and `vertical'
	  global constants be static.
	  Similarly, make functions sp_intersector_a_vector_snap,
	  sp_desktop_dim_snap_list static.

	* configure.in: Fix sigc++ checking code: add it to the existing
	  PKG_CHECK_MODULES(INKSCAPE, ...)  list instead of modifying
	  $CXXFLAGS,$LIBS.

	* distro: Remove some bashisms: change `function f {...}' to
	  `f () {...}', and invoke self with `sh' rather than `bash'.

	  Also change a strange-looking "tr '  ' ' '" to "tr -s ' '", as
	  a guess as to the intended meaning.  (The actual meaning of the
	  original is a noop.)

2004-01-06  bulia byak <bulia@dr.com>

        * src/document-undo.cpp src/document.h: Undo and redo now return gbooleans

        * src/selection-chemistry.{cpp|h}: sp_undo, sp_redo: new, with statusbar
        diagnostics. Duplicate command adds statusbar diagnostics, places duplicate
        into the source's parent instead of document root

        * src/verbs.cpp: Use sp_undo, sp_redo. Tooltip edits

        * src/toolbox.cpp src/toolbox.h: New aux_toolbox_space()

        * src/interface.cpp: New commands in view (cycling desktops) and dialogs (hide dialogs)

        * src/main.cpp: Removed unneeded include

        * src/select-toolbar.cpp src/select-toolbar.h: New selector aux toolbar with XYWH
        spinbuttons (taken mostly from the size&position dialog)

        * src/toolbox.cpp src/toolbox.h: Removed selector aux toolbar code from here

        * src/helper/unit-menu.cpp: Use abbreviations in the unit menu

        * src/widgets/sp-widget.cpp: Added checks that the inkscape object is valid before
        disconnecting SPWidget from it

2004-01-06 MenTaLguY <mental@rydia.net>

	* src/Makefile.am: removed monostd.h
